# plasma-keyboard

./: .flatpak-manifest.json  .gitignore  CMakeLists.txt  README.md
flatpak/: regenerate-sources.sh
kcm/: CMakeLists.txt  keyboardlayoutgroupmodel.cpp  keyboardlayoutgroupmodel.h  keyboardlayoutmodel.cpp  keyboardlayoutmodel.h  plasmakeyboardkcm.cpp  plasmakeyboardkcm.h
kcm/ui/: KeyboardLayoutSelectorListView.qml  KeyboardLayoutSelectorSidebar.qml  main.qml  main_handset.qml  main_mediacenter.qml
layouts/: CMakeLists.txt
layouts/defaultplugin/: CMakeLists.txt  Dialpad.qml  Digits.qml  Dvorak.qml  Full.qml  FullExtended.qml  Numbers.qml  Qwerty.qml  Symbols.qml
layouts/en/: metadata.json
layouts/en/contents/layouts/: Dvorak.qml  Full.qml  FullExtended.qml  Main.qml
layouts/en/contents/layouts/shared/: Symbols.qml
layouts/ja/: metadata.json
layouts/ja/contents/layouts/: Full.qml  FullExtended.qml  Romaji.qml  TwelveKey.qml
layouts/ja/contents/layouts/shared/: Symbols.qml
layouts/ko/: metadata.json
layouts/ko/contents/layouts/: Full.qml  FullExtended.qml  Main.qml
layouts/ko/contents/layouts/shared/: Dialpad.qml  Digits.qml  Symbols.qml
layouts/zh-cn/: metadata.json
layouts/zh-cn/contents/layouts/: Full.qml  FullExtended.qml  Main.qml
layouts/zh-cn/contents/layouts/shared/: Numbers.qml  Symbols.qml
layouts/zh-tw/: metadata.json
layouts/zh-tw/contents/layouts/: Full.qml  FullExtended.qml  Main.qml
src/: CMakeLists.txt  config-plasma-keyboard.h.cmake  feedback.cpp  feedback.h  inputmethodconnection.cpp  inputmethodconnection.h  keycodes.h  kwinfakeinput.cpp  kwinfakeinput.h  main.cpp  plasmakeyboardsettings.kcfg  vkbdwaylandinputbackend.cpp  vkbdwaylandinputbackend.h
src/layouts/de_DE/: main.qml
src/layouts/fallback/: main.qml  symbols.qml
src/overlay/: longpresstrigger.cpp  longpresstrigger.h  overlaycontroller.h
src/qml/: KeyboardPanel.qml  main.qml
src/qmlplugin/: CMakeLists.txt  ControlKey.qml
src/styles/breeze/: style.qml
virtualkeyboard/: CMakeLists.txt  Messages.sh  inputbackend.cpp  inputbackend.h  inputengine.cpp  inputengine.h  keyboardcontroller.cpp  keyboardcontroller.h  keyboardlayoutmetadata.cpp  keyboardlayoutmetadata.h  keyboardpackageresolver.cpp  keyboardpackageresolver.h  virtualkeyboardattached.cpp  virtualkeyboardattached.h  virtualkeyboardcontext.cpp  virtualkeyboardcontext.h  wordcandidatelistmodel.cpp  wordcandidatelistmodel.h
virtualkeyboard/components/: AlternativeKeysPopup.qml  BreezeConstants.qml  FlickPreviewPopup.qml  Keyboard.qml  KeyboardColumn.qml  KeyboardLayout.qml  KeyboardLayoutLoader.qml  KeyboardNavigation.qml  KeyboardRow.qml  KeyboardStrip.qml  LanguagePopup.qml  PopupBackground.qml  PreeditBubble.qml
virtualkeyboard/components/keys/: AbstractKey.qml  ActionKey.qml  BackspaceKey.qml  ChangeLanguageKey.qml  EnterKey.qml  FillerKey.qml  FlickKey.qml  FlickKeyPrivate.qml  HideKeyboardKey.qml  InputModeKey.qml  Key.qml  KeyMouseArea.qml  KeysymKey.qml  ShiftKey.qml  SpaceKey.qml  SymbolModeKey.qml
virtualkeyboard/textcomposers/: abstracttextcomposer.cpp  abstracttextcomposer.h  anthytextcomposer.cpp  anthytextcomposer.h  directtextcomposer.cpp  directtextcomposer.h  hangultextcomposer.cpp  hangultextcomposer.h  pinyintextcomposer.cpp  pinyintextcomposer.h  zhuyintextcomposer.cpp  zhuyintextcomposer.h
